--- a/src/main/resources/templates/initiativeTracker.html
+++ b/src/main/resources/templates/initiativeTracker.html
@@ -2,7 +2,7 @@
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
+>
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -90,7 +90,8 @@
                     <p class="text-wrap text-light" style="font-weight: bold;">
                         If you save the initiative the ID will be shown below. Keep it to be able to
                         reload the tracker later.</p>
-                    <p class="text-light" style="font-weight: bold;" th:if="${initiativeId}" th:text="${initiativeId}"></p>
+                    <p class="text-light" style="font-weight: bold;" th:if="${initiativeId}"
+                       th:text="${initiativeId}"></p>
                 </div>
             </div>
         </form>
