--- a/src/main/resources/templates/levelsTable.html
+++ b/src/main/resources/templates/levelsTable.html
@@ -2,7 +2,7 @@
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
+>
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,7 +14,8 @@
 <body>
 <div th:replace="~{templates :: navbar('','','','','active')}"></div>
 <main class="container">
-    <div style="margin: auto; margin-top: 2%; width: 50%; text-align: center" class="text-light"><h1>Levels table</h1></div>
+    <div style="margin: auto; margin-top: 2%; width: 50%; text-align: center" class="text-light"><h1>Levels table</h1>
+    </div>
     <table class="table table-hover table-striped table-dark" style="margin-bottom: auto;">
         <tr>
             <th>Level</th>
