--- a/src/main/resources/templates/templates.html
+++ b/src/main/resources/templates/templates.html
@@ -53,8 +53,10 @@
             </form>
             <div class="nav-item d-flex">
                 <a class="btn btn-outline-success me-2" th:href="@{/login}" sec:authorize="isAnonymous()">Log in</a>
-                <form th:action="@{/logout}" method="post" >
-                    <button class="btn btn-outline-success me-2" type="submit" sec:authorize="isAuthenticated()">Logout</button>
+                <form th:action="@{/logout}" method="post">
+                    <button class="btn btn-outline-success me-2" type="submit" sec:authorize="isAuthenticated()">
+                        Logout
+                    </button>
                 </form>
                 <a class="btn btn-success me-2" th:href="@{/register}" sec:authorize="isAnonymous()">Register</a>
             </div>
